header = [
	'Header/HashTable.hpp',
	'Header/AVLTree.hpp',
	'Header/LinkedList.hpp'
]


implementation = [
	'Implementation/HashTable.cpp',
	'Implementation/AVLTree.cpp',
	'Implementation/LinkedList.cpp',
	'Implementation/List.cpp',
	'Implementation/Employee.cpp',
	'Implementation/ID.cpp'
]


executable(
	meson.project_name(),
	'Main.cpp',
	install : true,
)
